--- a/k8s/api/deployment.yaml
+++ b/k8s/api/deployment.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: contacts
-          image: rssystem/contacts:1.0.0
+          image: rssystem/contacts:{{tag}}
           resources:
             limits:
               memory: "256Mi"
