add tag version

--- a/k8s/api/deployment.yaml
+++ b/k8s/api/deployment.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: contacts
-          image: rssystem/contacts:41
+          image: rssystem/contacts:{{tag_version}}
           resources:
             limits:
               memory: "256Mi"
