--- a/k8s/api/deployment.yaml
+++ b/k8s/api/deployment.yaml
@@ -17,6 +17,6 @@ spec:
           resources:
             limits:
               memory: "256Mi"
-              cpu: "200m"
+              cpu: "250"
           ports:
             - containerPort: 80
